--- a/docs/管理/实习生.md
+++ b/docs/管理/实习生.md
@@ -2,7 +2,7 @@
 
 为了全面评估实习生的为人处世态度、专业课成绩与学习态度，以及通用技能，可以从以下几个方面设计问题：
 
-# 1. 为人处世态度
+# 为人处世态度
 
 **团队合作**
 
@@ -28,7 +28,7 @@
 
 **问题8**：请描述一次你在工作或学习中遇到挫折的经历。你是如何应对和克服这些挑战的？
 
-# 2. 专业课成绩与学习态度
+# 专业课成绩与学习态度
 
 **专业课成绩**
 
@@ -42,7 +42,7 @@
 
 **问题12**：在学习过程中，如果遇到难以理解或掌握的内容，你通常会采取哪些方法来解决这些困难？
 
-# 3. 通用技能考察
+# 通用技能考察
 
 **计算机技能**
 
