--- a/docs/云上网络/华为云/虚拟私有云 VPC/01-产品介绍/001-图解虚拟私有云.md
+++ b/docs/云上网络/华为云/虚拟私有云 VPC/01-产品介绍/001-图解虚拟私有云.md
@@ -1,11 +1,7 @@
 # 图解虚拟私有云
 
-
-
-
-![zh-cn_image_0000001246160517](https://raw.githubusercontent.com/RenJiangZhou2163/PicGo/main/Blogs/Pictures/zh-cn_image_0000001246160517.png)
+![img](https://raw.githubusercontent.com/RenJiangZhou2163/PicGo/main/Blogs/Pictures/zh-cn_image_0000001246160517.png)
 
 ## 参考文档
 
-1. https://support.huaweicloud.com/productdesc-vpc/vpc_pro_0001.html    2022-08-25
-
+1. [https://support.huaweicloud.com/productdesc-vpc/vpc_pro_0001.html](https://support.huaweicloud.com/productdesc-vpc/vpc_pro_0001.html)    2022-08-25
